bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: object java.lang.String is not a value
  var message=String (litMessage())
              ^