bdr.BDR.scala.code
while(estSurMessage()){
  var message=String (litMessage())
  if(message==R){
    droite()
    avance()
  }
  if(message==L){
    gauche()
    avance()
  }
  if(message==I){
    droite()
    droite()
    avance()
  }
  if(message==A){
    avance()
  }
  if(message==B){
    avance()
    avance()
  }
  if(message==C){
    avance()
    avance()
    avance()
  }
  if(message==Z){
    recule()
  }
  if(message==Y){
    recule()
    recule()
  }
  if(message==X){
    recule()
    recule()
    recule()
  }
}